Fix footer z-index.

--- a/src/components/Footer/styles/footerStyle.css
+++ b/src/components/Footer/styles/footerStyle.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    z-index: 10;
     width: 100%;
     height: 5rem;
     position: absolute;
